# NeNeCpp

./: .gitignore  CMakeLists.txt  Layer.cpp  Layer.h  Net.cpp  Net.h  Neuron.cpp  Neuron.h  NeuronNetwork.cpp  NeuronNetwork.h  NeuronsLink.cpp  NeuronsLink.h  main.cpp
